22 January 2008
+ Added resize directory creation.
+ Turning cacheOff on javascript popups. Allows thumbnail refresh.
+ Renamed menu function to openFileManager to match operation name.
+ If an image is deleted, its resize directory is as well. Also
  removed old parent/child deletion logic.
+ Added a degrees parameter to Image's rotate function.
+ module and itemname variables and functions removed from image
  manager.
+ Old method of choosing images removed from Image Manager.
+ Starting (but not completed) resize images function for updates.


19 January 2008
+ Added logged error message if a folder can not be created.
+ Checking for multimedia directory creation again on update. Could be
slipping by on some updates.

17 January 2008
+ Rewrite of File Cabinet in progress.
+ all boost directories need replacing

10 December 2007
+ Removed "echo '1'" from Image.php. Thanks again verdon.

Version 1.4.1
-----------------------------------------------------------------------
+ Fixed missing table column (thanks verdon)

Version 1.4.0
-----------------------------------------------------------------------
4 December 2007
+ Fixed printErrors function in File_Common.
+ If pear return application/octet-stream as the mime type, file
  common tries to use mime_content_type to verify.

3 December 2007
+ Fixed delete link in document listing.
+ If no title is entered for a document, it uses the file name.

29 November 2007
+ Delete link in image selection works again.
+ Moved scripts out of head.js and into their own files.
+ Updated: javascript/folder_contents/head.js,
           javascript/folder_contents/scripts.js,
           javascript/pick_image/head.js,
           javascript/pick_image/scripts.js


26 November 2007
+ Fixed multimedia generic thumbnail copying.

12 November 2007
+ Added image height limits to standardize the image manager selection
screen.
+ Updated: templates/style.css

9 November 2007
+ Added a crop threshold to the cropping function. If the pixel