@@ -69,7 +69,52 @@ class FC_File_Assoc {
 
     function getTag()
     {
-        return PHPWS_Text::decodeText($this->tag);
+        switch ($this->file_type) {
+        case FC_IMAGE_RANDOM:
+            return $this->randomImage();
+            break;
+            
+        case FC_IMAGE_FOLDER:
+            return $this->slideshow();
+            break;
+            
+        default:
+            return PHPWS_Text::decodeText($this->tag);            
+        }
+
+    }
+
+    function randomImage()
+    {
+        PHPWS_Core::initModClass('filecabinet', 'Image.php');
+        $image = new PHPWS_Image;
+        $db = new PHPWS_DB('images');
+        $db->addWhere('folder_id', $this->file_id);
+        $db->addorder('random');
+        $db->setLimit(1);
+        if ($db->loadObject($image)) {
+            return $image->getTag();
+        } else {
+            return dgettext('filecabinet', 'Folder missing image files.');
+        }
+    }
+
+    function slideshow()
+    {
+        Layout::addStyle('filecabinet', 'style.css');
+        PHPWS_Core::initModClass('filecabinet', 'Image.php');
+        $db = new PHPWS_DB('images');
+        $db->addWhere('folder_id', $this->file_id);
+
+        $result = $db->getObjects('PHPWS_Image');
+        if (PHPWS_Error::logIfError($result) || !$result) {
+            return dgettext('filecabinet', 'Folder missing image files.');
+        } else {
+            foreach ($result as $image) {
+                $tpl['thumbnails'][] = array('IMAGE'=> $image->getJSView(true));
+            }
+            return PHPWS_Template::process($tpl, 'filecabinet', 'ss_box.tpl');
+        }
     }
 
     function getTable()
@@ -94,18 +139,26 @@ class FC_File_Assoc {
     function getFolder()
     {
         $db = new PHPWS_DB('folders');
-        $table = $this->getTable();
-        $folder = new Folder;
-        $db->addWhere('fc_file_assoc.id', $this->id);
-        $db->addWhere('fc_file_assoc.file_id', "$table.id");
-        $db->addWhere('folders.id', "$table.folder_id");
-
-        $result = $db->loadObject($folder);
-
-        if (PHPWS_Error::logIfError($result) || !$result) {
-            return false;
+        if ($this->file_type == FC_IMAGE_RANDOM || $this->file_type == FC_IMAGE_FOLDER) {
+            $folder = new Folder($this->file_id);
+            if (PHPWS_Error::logIfError($folder) || !$folder->id) {
+                return false;
+            } else {
+                return $folder;
+            }
         } else {
-            return $folder;
+            $table = $this->getTable();
+            $folder = new Folder;
+            $db->addWhere('fc_file_assoc.id', $this->id);
+            $db->addWhere('fc_file_assoc.file_id', "$table.id");
+            $db->addWhere('folders.id', "$table.folder_id");
+
+            $result = $db->loadObject($folder);
+            if (PHPWS_Error::logIfError($result) || !$result) {
+                return false;
+            } else {
+                return $folder;
+            }
         }
     }
 
@@ -122,6 +175,15 @@ class FC_File_Assoc {
         $db->addWhere('file_id', (int)$id);
         $db->addValue('tag',  htmlentities($tag, ENT_QUOTES, 'UTF-8'));
         $db->update();
+    }
+
+    function imageFolderView()
+    {
+        PHPWS_Core::initModClass('filecabinet', 'Image.php');
+        $db = new PHPWS_DB('images');
+        $db->addWhere('folder_id', $this->file_id);
+        $result = $db->getObjects('PHPWS_Image');
+        test($result,1);
     }
 }
 
