@@ -2,16 +2,18 @@
     <div id="type-select">
     {DOCUMENT_ICON} {IMAGE_ICON} {MEDIA_ICON}
     </div>
-     <h1>{FOLDER_TITLE}</h1>
-     <div id="selection">
-     <div id="item-selection">
-     <!-- BEGIN items --><div class="item">
-        {ICON}<br />
-        {TITLE}<br />
-        <span class="smaller">{INFO}</span><br />
-        {LINKS}
-     </div><!-- END items -->
+     <div id="folder-title">
+         <span id="heading">{FOLDER_TITLE}</span>
+         <span class="alt{ALT_HIGH1}">{ALT1}</span><span class="alt{ALT_HIGH2}">{ALT2}</span>
      </div>
+     <div id="selection">
+        <div id="item-selection">
+        <!-- BEGIN items --><div class="item {HIGHLIGHT}"><div>
+           {ICON}<br />
+           {TITLE}<br />
+           <span class="smaller">{INFO}</span><br />
+           {LINKS}</div>
+     </div><!-- END items -->
      </div>
 </div>
 
