@@ -1,0 +1,3 @@
+<div class="fc-thumbnails">
+<!-- BEGIN thumbnails -->{IMAGE}<!-- END thumbnails -->
+</div>
